# BurstLinker

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
android/: .gitignore  build.gradle  gradle.properties  upload.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
android/lib/src/main/: AndroidManifest.xml
android/lib/src/main/cpp/: BayerDithererWithRs.cpp  BayerDithererWithRs.h  BurstLinker.cpp  DisableDithererWithRs.cpp  DisableDithererWithRs.h  DithererWithRs.cpp  DithererWithRs.h  NoDithererWithRs.cpp  NoDithererWithRs.h
android/lib/src/main/java/com/bilibili/burstlinker/: BurstLinker.java  GifEncodeException.java
android/lib/src/main/rs/: linear.rs
android/sample/: build.gradle
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/com/bilibili/burstlinker/sample/: MainActivity.java
android/sample/src/main/res/layout/: activity_main.xml
android/sample/src/main/res/values/: strings.xml
example/: Main.cpp
src/: BayerDitherer.cpp  BayerDitherer.h  BurstLinker.cpp  BurstLinker.h  CMakeLists.txt  ColorQuantizer.cpp  ColorQuantizer.h  DisableDitherer.cpp  DisableDitherer.h  Ditherer.cpp  Ditherer.h  FloydSteinbergDitherer.cpp  FloydSteinbergDitherer.h  GifAnalyzer.cpp  GifAnalyzer.h  GifBlockWriter.cpp  GifBlockWriter.h  GifEncoder.cpp  GifEncoder.h  GifLogger.cpp  GifLogger.h  KDTree.cpp  KDTree.h  KMeansQuantizer.cpp  KMeansQuantizer.h  Logger.cpp  Logger.h  LzwEncoder.cpp  LzwEncoder.h  M2Ditherer.cpp  M2Ditherer.h  Main.cpp  MedianCutQuantizer.cpp  MedianCutQuantizer.h  NeuQuant.cpp  NeuQuant.h  NeuQuantQuantizer.cpp  NeuQuantQuantizer.h  NoDitherer.cpp  NoDitherer.h  (+7 more)
thirdpart/FreeImage/x86/include/: FreeImagePlus.h
